chore: enforce static ores-trace logging IDs (#48)
* chore: enforce ores-trace static logging ids

* feat: add static ORES trace markers to node error handlers

* fix: scope trace marker guard to implementation code

* feat(eslint): require trace routine and send chains

* test(eslint): cover observability chain contract

* fix: restore valid base logger source before observability lint

* fix(ci): ignore trace rule implementation literals

* fix: restore coherent node staging script

* docs: define static observability logging contract

* feat(logging): instrument browser global handlers

* feat(eslint): track CommonJS and aliased logger consumers

* test(eslint): add CommonJS and alias observability cases

* fix(packaging): keep staged node manifest publish-only

* fix(ci): execute native hardening suites with correct shells

* style(gleam): apply canonical formatter output

* style(gleam): apply canonical shutdown formatting

* fix(java): restore Java 17 thread compatibility

* test(java): keep adversarial suite Java 17 compatible

* test(java): keep core suite Java 17 compatible

* fix(java): restore level-method parity in legacy facade

* fix(erlang): restore level and per-event OTEL parity

* test(java): keep scope lifecycle explicit under Werror

* style(polyglot): apply canonical Go and Dart formatting

* feat(go): add defensive context capture helpers

* test(go): mark adversarial span as recording

* fix(go): preserve explicit event trace over ambient context

* fix(go): surface nil OTEL span fallback

* fix(go): lint in-memory source without filesystem lookup

* fix(go): make zero-value logger event tracking safe

* fix(go): restore logger close structure after integrity check

* test(dart): add exact formatter oracle

* test(dart): apply canonical formatting through exact runner

* style(dart): apply Dart 3.13.3 canonical formatting

* fix(go): restore HTTP shutdown lifecycle adapter

* fix(gleam): use current process spawn API

* fix(pack): support sour