@@ -41,12 +41,18 @@ public final class NextLoggersAdversarialTest {
     assert NextLoggers.currentContext() == null;
     NextLoggers.TraceContext parent = new NextLoggers.TraceContext("parent", "span-parent", 1);
     NextLoggers.TraceContext child = new NextLoggers.TraceContext("child", "span-child", 1);
-    try (NextLoggers.Scope ignored = NextLoggers.withContext(parent)) {
+    NextLoggers.Scope parentScope = NextLoggers.withContext(parent);
+    try {
       assert NextLoggers.currentContext().traceId().equals("parent");
-      try (NextLoggers.Scope ignoredChild = NextLoggers.withContext(child)) {
+      NextLoggers.Scope childScope = NextLoggers.withContext(child);
+      try {
         assert NextLoggers.currentContext().traceId().equals("child");
+      } finally {
+        childScope.close();
       }
       assert NextLoggers.currentContext().traceId().equals("parent");
+    } finally {
+      parentScope.close();
     }
     assert NextLoggers.currentContext() == null;
   }
@@ -55,13 +61,14 @@ public final class NextLoggersAdversarialTest {
     NextLoggers.Scope scope = NextLoggers.withContext(
         new NextLoggers.TraceContext("owner", "span", 1));
     AtomicReference<Throwable> failure = new AtomicReference<>();
-    Thread thread = Thread.ofPlatform().start(() -> {
+    Thread thread = new Thread(() -> {
       try {
         scope.close();
       } catch (Throwable error) {
         failure.set(error);
       }
     });
+    thread.start();
     thread.join();
     assert failure.get() instanceof IllegalStateException;
     assert failure.get().getMessage().contains("different thread");
@@ -84,7 +91,7 @@ public final class NextLoggersAdversarialTest {
     tags.set(0, "mutated");
     assert context.baggage().get("tenant").equals("acme");
     assert context.fields().get("route").equals("/pay");
-    assert context.tags().getFirst().equals("request");
+    assert context.tags().get(0).equals("request");
     assertThrows(UnsupportedOperationException.class, () -> context.baggage().put("x", "y"));
     assertThrows(UnsupportedOperationException.class, () -> context.fields().put("x", true));
     assertThrows(UnsupportedOperationException.class, () -> context.tags().add("x"));
@@ -93,11 +100,14 @@ public final class NextLoggersAdversarialTest {
   private static void explicitTraceRemainsPrimary() {
     NextLoggers.MemoryTransport memory = new NextLoggers.MemoryTransport();
     NextLoggers.Logger logger = logger(NextLoggers.Level.TRACE, List.of(memory));
-    try (NextLoggers.Scope ignored = NextLoggers.withContext(
-        new NextLoggers.TraceContext("ambient", "ambient-span", 1))) {
+    NextLoggers.Scope scope = NextLoggers.withContext(
+        new NextLoggers.TraceContext("ambient", "ambient-span", 1));
+    try {
       logger.info("inside").addTrace("explicit").send();
+    } finally {
+      scope.close();
     }
-    NextLoggers.LogRecord record = memory.records().getFirst();
+    NextLoggers.LogRecord record = memory.records().get(0);
     assert record.traceId().equals("explicit");
     assert record.traceIds().equals(List.of("explicit", "ambient"));
     assert record.fields().get("otel.span_id").equals("ambient-span");
@@ -136,7 +146,7 @@ public final class NextLoggersAdversarialTest {
     RuntimeException error = assertThrows(RuntimeException.class, () -> logger.error("fanout").send());
     assert error.getSuppressed().length == 2;
     assert memory.records().size() == 1;
-    assert memory.records().getFirst().message().equals("fanout");
+    assert memory.records().get(0).message().equals("fanout");
   }
 
   private static void jsonEscapesControlCharacters() {
@@ -159,15 +169,20 @@ public final class NextLoggersAdversarialTest {
     List<Thread> threads = new ArrayList<>();
     for (int index = 0; index < count; index++) {
       final int value = index;
-      threads.add(Thread.ofPlatform().start(() -> {
+      Thread thread = new Thread(() -> {
         String trace = "trace-" + value;
-        try (NextLoggers.Scope ignored = NextLoggers.withContext(
-            new NextLoggers.TraceContext(trace, "span-" + value, 1))) {
+        NextLoggers.Scope scope = NextLoggers.withContext(
+            new NextLoggers.TraceContext(trace, "span-" + value, 1));
+        try {
           ready.countDown();
           await(start);
           logger.info("message-" + value).send();
+        } finally {
+          scope.close();
         }
-      }));
+      });
+      thread.start();
+      threads.add(thread);
     }
     ready.await();
     start.countDown();
